Refactor/follower count column (#276)